feat: Implement Verification Overview component with detailed metrics and status tracking
- Added interfaces for SummaryMetric, CoverageItem, CampaignItem, EvidencePackage, and BlockerItem.
- Created VerificationOverview component to display summary metrics, coverage details, campaign progress, evidence packages, and blockers.
- Implemented status styles and labels for various metrics and items.
- Enhanced UI with responsive design and interactive buttons for task creation and data uploads.
- Updated documentation to reflect changes in product definition structure and requirements.

--- a/docs/需求文档.md
+++ b/docs/需求文档.md
@@ -115,3 +115,64 @@
 - **附录 B**：数据模型草图与元数据字段表；  
 - **附录 C**：接口清单（REST/事件）。
 
+---
+## 10. 分类调整方案（六大数据域）
+为贴合“产品定义、设计实现、仿真验证、试验与测量、工艺与生产、管理与保障”六类数据视图，提出如下调整方案（不改变数据本源，只优化信息架构与导航）。
+
+### 10.1 六类数据域定义与边界
+- 产品定义（Definition）：需求/ICD/参数基线/XBOM 映射/方案说明与基线策略；追溯起点与语义约束。  
+- 设计实现（Design Realization）：设计视图（结构/控制/性能预算/功率平衡等）与设计交付物；偏工程设计态。  
+- 仿真验证（Simulation Verification）：仿真项目/实例/文件/对比；模型有效性与边界条件管理。  
+- 试验与测量（Test & Measurement）：试验计划/覆盖/数据包/闭环状态；计量/标定数据（可纳入）。  
+- 工艺与生产（Process & Production）：工艺路线/特殊工艺/制造就绪度/产线能力/排产与物料交付。  
+- 管理与保障（Management & Support）：配置与质量（变更/基线/质量门/不合格）、协同与通知、权限审计与报表。
+
+### 10.2 现有模块 → 六类映射
+- 产品定义：
+  - 需求详情与角色视角（RequirementDetailPanel）
+  - 概览 Tab 的基线/指标/风险速览（概览保留为“跨域总览”，但归属 Definition 作为入口）
+  - 输出项中的方案文档/ICD/XBOM/基线策略等
+- 设计实现：
+  - 结构/强度（StructuralOverview）
+  - 控制与电子（ControlOverview）
+  - 性能预算与功率平衡（PerformanceOverview 的预算/假设片段）
+- 仿真验证：
+  - 仿真树/内容/预览/对比（Simulation* 组件）
+  - 概览中的仿真相关指标（可作为链接进入此域）
+- 试验与测量：
+  - 试验与验证看板（VerificationOverview：覆盖/任务/数据包/阻塞）
+- 工艺与生产：
+  - 制造与供应（ManufacturingOverview：就绪度/特殊工艺/交付/约束/产线能力/供应风险）
+- 管理与保障：
+  - 配置与质量（ConfigurationQualityOverview：基线/变更/质量门/不合格）
+  - 协同与通知（CollaborationHub：在线/动态/提醒/评审）
+
+### 10.3 UI/导航调整建议
+- 保留“概览”作为 BOM 节点的跨域总览（带阶段切换：初样/试样/正样等）。
+- 在概览旁新增“六域 Tab”（Definition/Design/Simulation/Test/Process/Management），或以二级标签呈现。  
+- 进入某域后，仅呈现该域组件与数据，避免跨域内容重复，概览仅做“速览+跳转”。
+- 本地持久化：将 `activeDomain` 与 `activePhase` 写入 localStorage，延续当前视图偏好的实现。
+
+### 10.4 数据模型与元数据调整
+- 在现有数据结构（InputData/OutputData/Simulation/Verification等）新增字段：
+  - `domain: 'definition' | 'design' | 'simulation' | 'test' | 'process' | 'management'`（用于域内筛选与聚合）；
+  - `phase: 'concept' | 'preliminary' | 'detailed' | 'production' | ...`（阶段切片，概览使用）。
+- 输出项（OutputData）建议补充：`ownerRole`、`sourceSystem`、`traceTo`（需求或设计项 ID），便于 Definition/Design 间追溯。
+
+### 10.5 渐进式重构步骤（低风险）
+1) 增加 `activeDomain` 状态与本地存储，不移除现有 Tab；先在 UI 增加“六域切换”并仅切换可见组件。
+2) 给现有 mock 数据批量打上 `domain` 标记（可先在容器层做映射，逐步下沉到数据结构）。
+3) 将“方案数据”已更名的“概览”稳定后，逐步把专业板块从概览迁移到对应域，仅保留指标速览与跳转。
+4) 为“试验与测量”补充计量/标定样例，为“管理与保障”补充 RBAC/审计占位与报表占位。
+5) 完成后整理文档与术语表，统一对外宣传口径（六域+概览）。
+
+### 10.6 结论与约束（已确认）
+1) 试验与测量：不纳入计量/标定与设备健康数据，暂不做台架双向同步。
+2) 管理与保障：不包含交付后运维/服务数据（服务历史/备件/维修），聚焦配置/质量/协同/审计。
+3) 设计实现：需要 CAD/3D 预览与 PDM 明细的集成（与 PLM 透传字段需在接口清单落地）。
+4) 阶段：可自定义（概念/初样/试样/正样/量产等按型号/批次扩展）。
+5) 导航：只保留“概览 + 六域”一套导航，不再并行旧生命周期大 Tab。
+
+据此，下一步在 1–2 PR 内完成：
+- UI：新增六域 Tab，并将专业面板迁移到各域；概览保留指标与阶段切换；移除旧生命周期 Tab。
+- 数据：为现有 mock 数据补充 domain/phase 字段；为设计实现域引入 CAD/3D/PDM 占位。
